<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="PATIENT INFORMATION"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbTestId"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="62dp"
            android:layout_weight="1"
            android:text="@string/patientId"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtpatientId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patientIdHint"
            android:inputType="textPersonName"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbPatientId"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/firstName" />

        <EditText
            android:id="@+id/tvPatientId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/firstNameHint"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbNurseId"
            android:layout_width="197dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="22dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/lastName" />

        <EditText
            android:id="@+id/tvNurseId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/lastNameHint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbBPL"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="44dp"
            android:layout_weight="1"
            android:text="@string/department"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tvBPL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/departmentHint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbBPH"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/nurseId"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tvBPH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nurseIdHint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbTemperature"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/roomID"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/roomIDHint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/skyblue"
            android:onClick="addPatient"
            android:text="@string/Add"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showPatient"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/Show"/>

    </LinearLayout>
</LinearLayout>
