<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="ENROLL TEST INFORMATION"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbTestId"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="62dp"
            android:layout_weight="1"
            android:text="@string/testId"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtTestId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/testIdHint"
            android:layout_marginVertical="10dp"
            android:inputType="textPersonName"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbPatientId"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_marginVertical="10dp"
            android:text="@string/patientId"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtTestPatientId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patientIdHint"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbNurseId"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="22dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/nurseId"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtTestNurseId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginVertical="10dp"
            android:textSize="18sp"
            android:hint="@string/nurseIdHint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbBPL"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="44dp"
            android:layout_weight="1"
            android:layout_marginVertical="10dp"
            android:text="@string/bpl"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtBPL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/bplHint"
            android:inputType="textPersonName"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbBPH"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/bph"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtBPH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/bphHint"
            android:layout_marginVertical="10dp"
            android:textSize="18sp"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbTemperature"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/temperature"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/temperatureHint"
            android:layout_marginVertical="10dp"
            android:textSize="18sp"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/testBtnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/skyblue"
        android:onClick="addTest"
        android:text="Enroll"
        android:textColor="@color/black" />

</LinearLayout>
