<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="VIEW TEST INFORMATION"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbTestId"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="62dp"
            android:layout_weight="1"
            android:text="@string/testId"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtTestId"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/patientIdHint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbPatientId"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_marginVertical="10dp"
            android:text="@string/patientId"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvPatientId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/firstNameHint"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:inputType="textPersonName"
            android:editable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbNurseId"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="22dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/nurseId"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvNurseId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginVertical="10dp"
            android:textSize="18sp"
            android:hint="@string/lastNameHint"
            android:inputType="textPersonName"
            android:editable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbBPL"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="44dp"
            android:layout_weight="1"
            android:layout_marginVertical="10dp"
            android:text="@string/bpl"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvBPL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/departmentHint"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:inputType="textPersonName"
            android:editable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbBPH"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/bph"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvBPH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nurseIdHint"
            android:layout_marginVertical="10dp"
            android:textSize="18sp"
            android:inputType="textPersonName"
            android:editable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbTemperature"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/temperature"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/roomIDHint"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:editable="false"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/skyblue"
        android:onClick="showTest"
        android:text="Show Test by id"
        android:textColor="@color/black" />

</LinearLayout>
